# bitbucket-sunset

./: README.md  main.py  pyproject.toml
bitbucket_sunset/: apply_github_permissions.py  bitbucket.py  cli.py  expand_groups.py  extract_permissions.py  utils.py
